--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <label for="year">Year:</label>
         <input type="number" id="year" name="year"><br><br>
         <button type="submit">Add Car</button>
+        <img src"1710848382159.jpg">
     </form>
     <table id="carTable">
         <thead>
